feat:controllers notification,utils,routes,seeders
